# mini-exchange

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/common/: log.yml
src/common/config/: logging.py  settings.py
src/common/consumers/: Consumer.py
src/common/domain/: entities.py  manager.py
src/common/models/: basic.py
src/common/serializers/: transcodings.py
src/web/: app.py
src/web/api/: routes.py
src/web/models/: requests.py  responses.py
src/web/serializers/: response_handlers.py
src/worker/: app.py
src/worker/consumers/: VernemqConsumer.py
tests/: base.py  test_buy.py  test_deposit.py  test_sell.py  test_withdraw.py
